<resources>
    //Main
    <string name="app_name">Critter McCool Appointment Scheduling</string>
    <string name="img_description1">Critter McCool with 5-Foot Yellow Jacket Nest - Post and Courier 2022</string>
    <string name="title_txt">Critter McCool</string>
    <string name="subtitle">The Authority On Stinging Insect Control</string>
    <string name="address_ln1">Headquarters in Charleston, SC</string>
    <string name="operation_hours">Hours of Operation: 8am - 8pm, M - F</string>
    <string name="office_phone">Phone: 843-670-8623</string>
    <string name="email">Email: crittermccool@gmail.com</string>
    <string name="img_description2">Save The Pollinators Certification</string>
    <string name="schedule_btn">Request An Appointment</string>
    <string name="adminLogin_btn">Admin</string>
    <string name="website">Official Website: https://crittermccool.com</string>

    //Admin Login
    <string name="adminLogin_header">Sign In As Administrator</string>
    <string name="id_hint">Identification Code</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="adminLogin_back_btn">Back</string>

    //Admin
    <string name="welcome">Welcome, Critter McCool!</string>
    <string name="appointmentRequests">Here are your appointment requests:</string>
    <string name="deleteButton">Delete</string>

    //Appointment Info
    <string name="duration">*How Long Has The Problem Been Going On?</string>
    <string name="duration_hint">Ex: 1 week</string>
    <string name="your_info">*Please Enter Your Information Below:</string>
    <string name="name_hint">First and Last Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="address_hint">Address of Service</string>
    <string name="email_hint">Email Address</string>
    <string name="next_btn">Next</string>
    <string name="img_description5">Bees</string>
    <string name="img_description4">Critter McCool standing next to a bee hive</string>
    <string name="appointmentInfo_back_btn">Back</string>

    <string name="img_description3">Critter McCool with the largest section of honeycomb removed from a structure in the world</string>

    //Time and Date
    <string name="when">When Would You Like To Request An Appointment For?</string>
    <string name="fillInInfo">Please fill in the information below</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="finishBtn">Finish</string>
    <string name="timeDate_back_btn">Back</string>

    //Info Confirmation
    <string name="infoCorrectYN">Is all of the information below correct?:</string>
    <string name="typeOfInsect">Insect: </string>
    <string name="typeOfInsect_txt"></string>
    <string name="durationOfProblem">Duration: </string>
    <string name="durationOfProblem_txt"></string>
    <string name="fullName">Name: </string>
    <string name="fullName_txt"></string>
    <string name="phoneNumber">Phone: </string>
    <string name="phoneNumber_txt"></string>
    <string name="serviceAddress">Address: </string>
    <string name="serviceAddress_txt"></string>
    <string name="emailAddress">Email: </string>
    <string name="emailAddress_txt"></string>
    <string name="requestedTime">Requested Time: </string>
    <string name="requestedTime_txt"></string>
    <string name="requestedDate">Requested Date: </string>
    <string name="requestedDate_txt"></string>
    <string name="yesBtn">Yes</string>
    <string name="noBtn">No</string>

    //Confirmation
    <string name="requested">Your appointment has been requested successfully!</string>
    <string name="awaitConfirmation">You will be contacted ASAP to officially confirm your appointment.</string>
    <string name="okBtn">Ok</string>
    <string name="title_activity_admin_login">AdminLogin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>