<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2ECCB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/title_txt"
        android:textColor="#3A2902"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/subtitle"
        app:layout_constraintStart_toStartOf="@+id/subtitle"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/subtitle"
        android:textColor="#634801"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        tools:layout_editor_absoluteY="55dp" />

    <Button
        android:id="@+id/RequestAppointment_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3A2902"
        android:fontFamily="serif-monospace"
        android:text="@string/schedule_btn"
        android:textColor="#F7E7D2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/website"
        app:layout_constraintStart_toStartOf="@+id/website"
        tools:layout_editor_absoluteY="531dp" />

    <TextView
        android:id="@+id/address_ln2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/operation_hours"
        android:textColor="#634801"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/office_phone"
        app:layout_constraintStart_toStartOf="@+id/office_phone"
        tools:layout_editor_absoluteY="401dp" />

    <TextView
        android:id="@+id/office_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/office_phone"
        android:textColor="#634801"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        tools:layout_editor_absoluteY="457dp" />

    <TextView
        android:id="@+id/address_ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/address_ln1"
        android:textColor="#634801"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/address_ln2"
        app:layout_constraintStart_toStartOf="@+id/address_ln2"
        tools:layout_editor_absoluteY="370dp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/email"
        android:textColor="#634801"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/RequestAppointment_Btn"
        app:layout_constraintStart_toStartOf="@+id/RequestAppointment_Btn"
        tools:layout_editor_absoluteY="494dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="405dp"
        android:layout_height="230dp"
        android:contentDescription="@string/img_description1"
        app:layout_constraintEnd_toEndOf="@+id/address_ln1"
        app:layout_constraintStart_toStartOf="@+id/address_ln1"
        app:srcCompat="@drawable/crittermccool1"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/website"
        android:textColor="#634801"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="606dp" />

    <Button
        android:id="@+id/adminLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="310dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#F2ECCB "
        android:fontFamily="serif-monospace"
        android:text="@string/adminLogin_btn"
        android:textColor="#634801"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/website" />

</androidx.constraintlayout.widget.ConstraintLayout>