<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2ECCB"
    tools:context=".Confirmation">

    <TextView
        android:id="@+id/requested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/requested"
        android:textAlignment="center"
        android:textColor="#3A2902"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/awaitConfirmation"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/awaitConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/awaitConfirmation"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#634801"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Ok_Btn"
        app:layout_constraintEnd_toEndOf="@+id/requested"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/requested"
        app:layout_constraintTop_toBottomOf="@+id/requested"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/Ok_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3A2902"
        android:fontFamily="serif-monospace"
        android:text="@string/okBtn"
        android:textAlignment="center"
        android:textColor="#F2ECCB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/awaitConfirmation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/awaitConfirmation"
        app:layout_constraintTop_toBottomOf="@+id/awaitConfirmation"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="215dp"
        android:layout_height="256dp"
        android:contentDescription="@string/img_description4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Ok_Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/Ok_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Ok_Btn"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/crittermccool4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="278dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/requested"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="413dp"
            android:layout_height="239dp"
            android:contentDescription="@string/img_description5"
            app:srcCompat="@drawable/bees" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>